--- a/web/UserErfassen.xhtml
+++ b/web/UserErfassen.xhtml
@@ -32,7 +32,7 @@
                                                     </td>
                                                     
                                                     <td width="20%"> 
-                                                         Eingeloggt als: #{gui_UserErfassen.username}  <br/>
+                                                        Eingeloggt als: #{gui_UserErfassen_LoggedUser.loggedUser}  <br/>
                                                     </td>
                                                     
                                                     <td width="15%">
