--- a/web/User_bearbeiten.xhtml
+++ b/web/User_bearbeiten.xhtml
@@ -32,7 +32,7 @@
                                                     </td>
                                                     
                                                     <td width="20%"> 
-                                                         Eingeloggt als: #{gui_Userbearbeiten.username}  <br/>
+                                                        Eingeloggt als: #{gui_UserErfassen_LoggedUser.loggedUser}  <br/>
                                                     </td>
                                                     
                                                     <td width="15%">
@@ -67,7 +67,13 @@
 							<td>                                                             
                                                             <h:inputText style="width:100%;height:100%" value="#{gui_Userbearbeiten.email}" size="80" label="Email"></h:inputText>                                                      	 
 							</td>
-						</tr>	
+						</tr>
+                                                <tr>
+							<td width="20%" >Passwort</td> 
+							<td>                                                             
+                                                            <h:outputText style="width:100%;height:100%" value="#{gui_Userbearbeiten.oldPassword}"></h:outputText>                                                      	 
+							</td>
+						</tr>
                                                 <tr>
 							<td width="20%" >neues Passwort</td> 
 							<td>                                                             
