--- a/web/Ticket_bearbeiten.xhtml
+++ b/web/Ticket_bearbeiten.xhtml
@@ -54,12 +54,16 @@
                                                        <f:param name="UsernameTemp" value="#{gui_Ticketbearbeiten.username}"></f:param>
                                                     </h:commandButton>
                                                 <div class="divider"/>
-                                                <h:commandButton rendered="#{gui_Ticketbearbeiten.usergroup = '3' }" value="Benutzerverwaltung" class="button">
+                                                <h:commandButton rendered="#{gui_Ticketbearbeiten.usergroup eq '3' }" value="Benutzerverwaltung" class="button">
+                                                    <f:param name="TicketID" value="#{gui_Ticketbearbeiten.ID}"></f:param>
+                                                       <f:param name="UsernameTemp" value="#{gui_Ticketbearbeiten.username}"></f:param>
+                                                </h:commandButton>
+                                                <h:commandButton rendered="#{gui_Ticketbearbeiten.usergroup eq '2' }" value="Ticketübersicht" action="Ticket_Uebersicht_Student.xhtml" class="button">
                                                     <f:param name="TicketID" value="#{gui_Ticketbearbeiten.ID}"></f:param>
                                                        <f:param name="UsernameTemp" value="#{gui_Ticketbearbeiten.username}"></f:param>
                                                 </h:commandButton>
                                                 <div class="divider"/>
-                                                <h:commandButton value="Ticketübersicht" class="button">
+                                                <h:commandButton rendered="#{gui_Ticketbearbeiten.usergroup eq '1' }" value="Ticketübersicht" action="Ticket_Uebersicht_TutorAdmin.xhtml" class="button">
                                                     <f:param name="TicketID" value="#{gui_Ticketbearbeiten.ID}"></f:param>
                                                        <f:param name="UsernameTemp" value="#{gui_Ticketbearbeiten.username}"></f:param>
                                                 </h:commandButton>
@@ -78,7 +82,7 @@
 							<td width="15%">Priorität</td>   
 							<td> 
                                                             <h:selectOneMenu id="Priority" value="#{gui_Ticketbearbeiten.priority}" style="width:150px">
-                                                                <f:selectItems value= "#{gui_Ticketbearbeiten.priorityList}" itemValue="#{gui_Ticketbearbeiten.priority}"/>
+                                                                <f:selectItems value= "#{gui_Ticketbearbeiten.priorityList}"/>
                                                             </h:selectOneMenu>
 							</td>             
 							<td width="15%" >Kategorie</td> 
@@ -110,7 +114,8 @@
                                                             </h:selectOneMenu> 
                                                         </td>
 							<td>gebuchte Zeit</td>
-							<td> <h:inputText id="ReportedTime" disabled="#{gui_Ticketbearbeiten.usergroup eq '2'}" value="#{gui_Ticketbearbeiten.reportedTime}" label="Gebuchte Zeit" style="width:150px"></h:inputText>
+							<td> 
+                                                            <h:inputText id="ReportedTime" disabled="#{gui_Ticketbearbeiten.usergroup eq '2'}" value="#{gui_Ticketbearbeiten.reportedTime}" label="Gebuchte Zeit" style="width:150px"></h:inputText>
                                                         </td>
 						</tr>
 					</table>					
