h:messages auch oben auf der Seite

--- a/web/User_bearbeiten.xhtml
+++ b/web/User_bearbeiten.xhtml
@@ -54,7 +54,7 @@
                                         </table>                                    
  					<br/> <br/>					
 
-					
+					<h:messages style="font-size:12px; color:red"></h:messages>
                                         <table id="Rand_neu"  width="30%">
 						<tr>
 							<td width="20%">Username</td>   
@@ -146,7 +146,7 @@
                                                     </td>           
 						</tr> 				   
 					</table> 
-					  				
+					<h:messages style="font-size:12px; color:red"></h:messages>  				
 				</td>
 			</tr>
 		</table>   
