h:messages auch oben auf der Seite

--- a/web/UserErfassen.xhtml
+++ b/web/UserErfassen.xhtml
@@ -52,7 +52,7 @@
                                         </table>
  					<br/> <br/>					
 
-					
+					<h:messages style="font-size:12px; color:red"></h:messages>
                                         <table id="Rand_neu"  width="30%">
 						<tr>
 							<td width="15%">Username</td>   
@@ -124,7 +124,8 @@
                                                     <h:commandButton value="Abbrechen" action = "User_Uebersicht.xhtml" ></h:commandButton>
                                                     </td>           
 						</tr> 				   
-					</table> 					  				
+					</table> 
+                                        <h:messages style="font-size:12px; color:red"></h:messages>
 				</td>
 			</tr>
 		</table>   
