--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -177,7 +177,10 @@
 								<b>Status</b>
 								</td>
                                                                 <td>
-								<b>Benutzer</b>
+								<b>Ersteller</b>
+								</td>
+                                                                <td>
+								<b>Zuordnung</b>
 								</td>
                                                                 <!-- Leerzeilen für Symbole -->
  								<td>
